js/js.translator/testData/incremental/invalidationWithPL/removeInlineFunction/lib1/l1b.1.kt
inline fun inlineBar(f: () -> Int) = f() + 1
